# gwage

./: CMakeLists.txt  README.md
core/: CMakeLists.txt
core/include/: window.h
core/src/: main.cpp  window.cpp
